--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <li>elemento 4</li>
     <li>elemento 5</li>
 </ul>
+<ol>
+    <li>Primavera-- 21 marzo</li>
+    <li>Verano-- 21 junio</li>
+    <li>Otono-- 21 sep</li>
+    <li>Invierno-- 21 dic</li>
+</ol>
    <script src="index.js"></script>
 
 </body>
