agregando dos parrafos.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <li>Otono-- 21 sep</li>
     <li>Invierno-- 21 dic</li>
 </ol>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita assumenda ducimus ad ex nulla. Rerum, veritatis earum iste ab nobis quam itaque doloremque, incidunt corporis repudiandae molestiae provident natus unde?</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sed laborum quo fugit repellendus illo esse nisi nulla, natus beatae praesentium fuga voluptates modi, blanditiis, eum accusantium error architecto sit!</p>
    <script src="index.js"></script>
 
 </body>
