Agregando IMG de Git

--- a/index.html
+++ b/index.html
@@ -10,23 +10,9 @@
 <body>
     <h1>Aprendiendo Git</h1>
     <p>Mis primeros pasos en el versionado de codigo y aprendiendo a resolver conflictos entre ramas</p>
-<ul>
-    <li>elemento 1</li>
-    <li>elemento 2</li>
-    <li>elemento 3</li>
-    <li>elemento 4</li>
-    <li>elemento 5</li>
-</ul>
-<ol>
-    <li>Primavera-- 21 marzo</li>
-    <li>Verano-- 21 junio</li>
-    <li>Otono-- 21 sep</li>
-    <li>Invierno-- 21 dic</li>
-</ol>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita assumenda ducimus ad ex nulla. Rerum, veritatis earum iste ab nobis quam itaque doloremque, incidunt corporis repudiandae molestiae provident natus unde?</p>
+    <p>Quieres dominar el uso de git</p>
+<img src="123.png" alt="">
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sed laborum quo fugit repellendus illo esse nisi nulla, natus beatae praesentium fuga voluptates modi, blanditiis, eum accusantium error architecto sit!</p>
    <script src="index.js"></script>
-
 </body>
 </html>
