--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>Aprendiendo Git</h1>
     <p>Mis primeros pasos en el versionado de codigo y aprendiendo a resolver conflictos entre ramas</p>
     <p>Quieres dominar el uso de git</p>
-<img src="123.png" alt="">
+    <img src="123.png" alt="">
+    <img src="11.bmp" alt="">
 
    <script src="index.js"></script>
 </body>
